--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "vue": "^2.6.11",
+    "vue-ctk-date-time-picker": "^2.4.0",
     "vue-router": "^3.1.5",
+    "vuejs-paginate": "^2.1.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
